sandc/test/fixtures/astRegression/shouldSucceed/productions/angleBracketEnclosedGenericMethodFormalTypeParams/AngleBracketEnclosedGenericMethodFormalTypeParams.sand
pub class AngleBracketEnclosedGenericMethodFormalTypeParams {
    foo<T, U extends Foo & Bar, R super S>() {
        
    }
}