sandc/test/fixtures/astRegression/shouldFail/typedObjectLiteral/Extends.sand
pub class Extends {
    illegalExtends() {
        Foo<T extends ArrayList> {
            foo: 8
        }
    }
}